@@ -39,6 +39,6 @@ public class GetYFunction extends AbstractFunction {
                     "Filter Function problem for function getY argument #0 - expected type Geometry");
         }
 
-        return new Double(StaticGeometry.getY(arg0));
+        return Double.valueOf(StaticGeometry.getY(arg0));
     }
 }
